src/objects/Survey_Distribute__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <summaryFilterItems>
            <field>Survey_Answers__c.If_rerender__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey_Answers__c.Survey_Distribute__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>个案</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Distribute</relationshipLabel>
        <relationshipName>Case_Survey_Distribute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IfFinished__c</fullName>
        <label>IfFinished</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Query_Type__c</fullName>
        <label>Query Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIP__c</fullName>
        <inlineHelpText>the source IP address of the request</inlineHelpText>
        <label>SIP</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Survey Distribute</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Survey Distribut名称</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>